test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_17.k
schema Person[name: str, age: int]:
    """"""

person = Person(10, "name")
